# crewai-playground

./: README.md  pyproject.toml
research_writer_agent/: README.md  pyproject.toml
research_writer_agent/src/research_writer_agent/: crew.py  main.py
