[project]
name = "research_writer_agent"
version = "0.1.0"
description = "research-writer-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
research_writer_agent = "research_writer_agent.main:run"
run_crew = "research_writer_agent.main:run"
train = "research_writer_agent.main:train"
replay = "research_writer_agent.main:replay"
test = "research_writer_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
